tests/errors/fsm-trig-too-long.fil
comp main<T: 4>(
  @interface[T] go_T: 1,
) -> () {
  fsm t[5](go_T);
}
