tests/errors/fsm-trig-too-long.expect
---STDERR---
error: Cannot prove constraint T+4 >= T+5
  ┌─ tests/errors/fsm-trig-too-long.fil:4:12
  │
4 │   fsm t[5](go_T);
  │            ^^^^ Trigger must not pulse more often than the FSM states

